// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Expected flow map to end with } 1`] = `
"Expected flow map to end with }
1 | {¶
  | ^"
`;

exports[`Flow map contains an unexpected : 1`] = `
"Flow map contains an unexpected :
1 | {·:·:·}¶
  | ^^^^^^^"
`;

exports[`Flow map contains an unexpected ? 1`] = `
"Flow map contains an unexpected ?
1 | {·:·?·}¶
  | ^^^^^^^"
`;

exports[`Flow map contains an unexpected ? 2`] = `
"Flow map contains an unexpected ?
1 | {·?·?·}¶
  | ^^^^^^^"
`;

exports[`Flow map contains an unexpected ] 1`] = `
"Flow map contains an unexpected ]
1 | {]¶
  | ^^"
`;
